fix: controllers e models (alerta, efetivo, modulo, qrcode, unidade e auth)
