# backend/src/routes/qrcodeRoutes.js
@@ -5,23 +5,23 @@ import authorizationMiddleware from '../middlewares/authorizationMiddleware.js';
 
 const router = express.Router();
 
-router.get('/qrcode', authenticationMiddleware, authorizationMiddleware({nivel_acesso: 2}), QRCodeController.getAllEntities, () => {
+router.get('/qrcode', QRCodeController.getAllEntities, () => {
   /* #swagger.tags = ['QRCode'] */
 });
 
-router.get('/qrcode/:qrcode', authenticationMiddleware, authorizationMiddleware({nivel_acesso: 2}), QRCodeController.getEntityByQRCode, () => {
+router.get('/qrcode/:qrcode', QRCodeController.getEntityByQRCode, () => {
   /* #swagger.tags = ['QRCode'] */
 });
 
-router.post('/qrcode', authenticationMiddleware, authorizationMiddleware({nivel_acesso: 2}), QRCodeController.createEntity, () => {
+router.post('/qrcode', QRCodeController.createEntity, () => {
   /* #swagger.tags = ['QRCode'] */
 });
 
-router.put('/qrcode/:qrcode', authenticationMiddleware, authorizationMiddleware({nivel_acesso: 2}), QRCodeController.updateEntity, () => {
+router.put('/qrcode/:qrcode', QRCodeController.updateEntity, () => {
   /* #swagger.tags = ['QRCode'] */
 });
 
-router.delete('/qrcode/:qrcode', authenticationMiddleware, authorizationMiddleware({nivel_acesso: 2}), QRCodeController.deleteEntity, () => {
+router.delete('/qrcode/:qrcode', QRCodeController.deleteEntity, () => {
   /* #swagger.tags = ['QRCode'] */
 });
 
